--- a/public/index.html
+++ b/public/index.html
@@ -88,9 +88,9 @@
   <div class="container">
     <h1>Тайный Санта</h1>
     <form id="f">
-      <input type="text" id="name" placeholder="Ваше имя" required>
-      <input type="text" id="gift" placeholder="Желаемый подарок" required>
-      <input type="submit" value="Сохранить">
+      <input type="text" id="name" placeholder="Имя" required>
+      <input type="text" id="gift" placeholder="Желаемые подарки" required>
+      <input type="submit" value="Добавить в базу">
     </form>
   </div>
 
