--- a/public/index.html
+++ b/public/index.html
@@ -121,6 +121,7 @@ for(let i=0;i<snowflakesCount;i++){
 
   snow.textContent = '❄';
   document.body.appendChild(snow);
+  console.log("REQ METHOD:", req.method);
 }
 </script>
 </body>
